update: fix spacing in review

--- a/part4/app/static/styles/styles.css
+++ b/part4/app/static/styles/styles.css
@@ -331,17 +331,19 @@ main {
     margin-bottom: 2rem;
 }
 
-.review-container h2 {
-    margin-bottom: 0.7rem;
-    text-align: left;
-    margin-left: 1rem;
-}
-
 .review-form {
     background: white;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.form-review-title {
+    margin-bottom: 1.2rem;
+    text-align: left;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding-left: 0;
 }
 
 /* Footer styles */
